# cloom

./: .gitignore  CHANGELOG.md  ExportOptions.plist  LICENSE  README.md  appcast.xml  build.sh  project.yml
.claude/: CLAUDE.md
.claude/plans/: 00-overview.md  01-architecture.md  01-features.md  02-project-structure.md  03-data-models.md  04-ffi-boundary.md  05-swift-modules.md  06-rust-modules.md  07-technical-challenges.md  08-implementation-phases.md  09-testing-strategy.md  10-dependencies.md  BUGS.md  PROGRESS.md
.claude/skills/logs/: SKILL.md  logs.sh
.claude/skills/release/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: release.yml  tests.yml
CloomApp/Resources/: Info.plist  Secrets.xcconfig.example
CloomApp/Sources/AI/: AIOrchestrator.swift  AIProcessingTracker.swift  AudioExtractor.swift  KeychainService.swift  TranscriptPersistenceService.swift
CloomApp/Sources/Annotations/: AnnotationModels.swift  (+13 more)
CloomTests/: AIProcessingTrackerTests.swift  AITextProcessingTests.swift  AppFeatureTests.swift  AudioChunkingTests.swift  AutoCutSelectionTests.swift  BlurRegionTests.swift  CacheTests.swift  CaptionGroupingTests.swift  CaptureMathTests.swift  CloudTests.swift  CommentSortingTests.swift  CreatorModeTests.swift  DataModelTests.swift  EditorCompositionTests.swift  ExportServiceTests.swift  FFIBridgeTests.swift  FillerWordConfigTests.swift  KeystrokeTests.swift  LibraryFilterTests.swift  MenuBarHintTests.swift  PunchInRewindTests.swift  RecordingSettingsTests.swift  RecordingStateTests.swift  ReframeTests.swift  SubtitleTimingTests.swift  TagSidebarTests.swift  TeleprompterTests.swift  TranscriptExportTests.swift  TranslationLanguageTests.swift  UpdateCheckerTests.swift  WaveformNoiseFloorTests.swift
CloomUITests/: RecordingFlowUITests.swift  SettingsUITests.swift
cloom-core/: Cargo.toml  build.rs
cloom-core/src/: gif_export.rs  gif_export_tests.rs  lib.rs  runtime.rs
cloom-core/src/ai/: llm.rs  llm_tests.rs  mod.rs  transcribe.rs
cloom-core/src/audio/: filler.rs  mod.rs  silence.rs  silence_tests.rs
cloom-core/tests/fixtures/: chapters_response.json  chat_completion_response.json  transcription_response.json
scripts/: generate-appcast.sh  release.sh
(+156 files in other folders)
