[package]
name = "cloom-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "cloom_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "2"
gifski = "1"
imgref = "1"
rgb = "0.8"
png = "0.17"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
tempfile = "3"
