[package]
name = "cloom-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "cloom_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "2"
async-openai = { version = "0.33", default-features = false, features = ["rustls", "audio", "chat-completion"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
oslog = { version = "0.2", features = ["logger"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
